fix buttons overflowing at some window sizes

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     margin: 5px;
     font-family: 'VT323', monospace;
     font-size: 12vh;
-    line-height: 50%;
+    line-height: 75%;
     overflow: hidden;
     border-style: inset;
     border-width: 4px;
@@ -89,7 +89,7 @@ body {
 }
 
 button {
-    display: flex;
+    /* display: flex; */
     flex-grow: 1;
     align-items: center;
     justify-content: center;
@@ -98,7 +98,7 @@ button {
     border-width: 4px;
     margin: 5px;
     font-family: 'Roboto Mono', monospace;
-    font-size: 5vh;
+    font-size: 4vh;
     outline: none;
 }
 
